// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationCard renders Alert inside the component when there is an error loading documents 1`] = `
<Alert
  noIcon={true}
>
  An error was encountered while checking your application for documents. If this continues to happen, you may call the Paid Family Leave Contact Center at (833) 344‑7365
</Alert>
`;

exports[`ApplicationCard when the claim status is Completed includes a button to upload additional documents 1`] = `
<ButtonLink
  className="display-block"
  href="/applications/upload-docs-options?claim_id=mock_application_id"
  variation={null}
>
  Upload additional documents
</ButtonLink>
`;

exports[`ApplicationCard when the claim status is Submitted includes a link to complete the claim 1`] = `
<ButtonLink
  className="display-block margin-top-2"
  href="/applications/checklist?claim_id=mock_application_id"
>
  Complete your application
</ButtonLink>
`;

exports[`ApplicationCard when there are legal notices displays legal notices 1`] = `
<li
  className="font-body-2xs"
  key="mock-document-3"
>
  <a
    className="text-medium"
    href=""
    onClick={[Function]}
  >
    Approval notice (PDF)
  </a>
  <div
    className="text-base-dark"
  >
    Posted 1/1/2021
  </div>
</li>
`;

exports[`ApplicationCard when there are legal notices displays legal notices 2`] = `
<li
  className="font-body-2xs"
  key="mock-document-4"
>
  <a
    className="text-medium"
    href=""
    onClick={[Function]}
  >
    Denial notice (PDF)
  </a>
  <div
    className="text-base-dark"
  >
    Posted 1/1/2021
  </div>
</li>
`;

exports[`ApplicationCard when there are legal notices displays legal notices 3`] = `
<li
  className="font-body-2xs"
  key="mock-document-5"
>
  <a
    className="text-medium"
    href=""
    onClick={[Function]}
  >
    Request for more information (PDF)
  </a>
  <div
    className="text-base-dark"
  >
    Posted 1/1/2021
  </div>
</li>
`;

exports[`ApplicationCard when there are legal notices includes a button to upload additional documents 1`] = `
<ButtonLink
  className="display-block"
  href="/applications/upload-docs-options?claim_id=mock_application_id"
  variation="outline"
>
  Upload additional documents
</ButtonLink>
`;
